--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,7 +21,7 @@ jobs:
       uses: docker/login-action@v1
       with:
         username: bjand49
-        password: 
+        password: ${{ secrets.DOCKER_PAT }}
         
     - name: Extract metadata (tags, labels) for Docker
       id: meta
